added joint effort controllers

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 
 # Allow user to enable or disable this w/o changing repo
 rrbot_gazebo_plugins/CATKIN_IGNORE
+
+# Ignore MacOS temp files
+.DS_Store
